--- a/css/styles.css
+++ b/css/styles.css
@@ -31,32 +31,44 @@ address {
 }
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
+/* -------------------------Common styles--------------------------- */
+:root {
+  --main-text-color: #8f95a5;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  line-height: 1.8;
+  color: var(--main-text-color);
+}
+
 /* --------------------------header------------------------- */
-Код писать здесь
+/* Код писать здесь */
 /* --------------------------header------------------------- */
 
 /* -------------------------------------------------------main------------------------------------------------------------------ */
 /* --------------------------hero------------------------- */
-Код писать здесь
+/* Код писать здесь */
 /* --------------------------hero------------------------- */
 
 /* --------------------------skills------------------------- */
-Код писать здесь
+/* Код писать здесь */
 /* --------------------------skills------------------------- */
 
 /* --------------------------about us------------------------- */
-Код писать здесь
+/* Код писать здесь */
 /* --------------------------about us------------------------- */
 
 /* --------------------------pricing------------------------- */
-Код писать здесь
+/* Код писать здесь */
 /* --------------------------pricing------------------------- */
 
 /* --------------------------contact us------------------------- */
-Код писать здесь
+/* Код писать здесь */
 /* --------------------------contact us------------------------- */
 /* -------------------------------------------------------main------------------------------------------------------------------ */
 
 /* ---------------------------------------------footer----------------------------------------------------- */
-Код писать здесь
+/* Код писать здесь */
 /* ---------------------------------------------footer----------------------------------------------------- */
