--- a/css/styles.css
+++ b/css/styles.css
@@ -160,5 +160,47 @@ body {
 /* -------------------------------------------------------main------------------------------------------------------------------ */
 
 /* ---------------------------------------------footer----------------------------------------------------- */
-/* Код писать здесь */
+.footer-content {
+  display: flex;
+  align-items: baseline;
+  border-top: solid 1px #C4C4C4;
+  padding-top: 22px;
+}
+
+.logo {
+  display: flex;
+
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 54px;
+  margin-right: 463px;
+
+  align-items: center;
+
+  color: #000000;
+}
+.logo-color{
+  color: #939393;
+}
+
+.items-footer {
+  display: flex;
+  
+}
+
+.item {
+  display: flex;
+
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  align-items: center;
+  letter-spacing: 0.02em;
+
+  color: #8f95a5;
+}
+.item:not(:last-child){
+  margin-right: 80px;
+}
 /* ---------------------------------------------footer----------------------------------------------------- */
