--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,10 @@ body {
 
 /* --------------------------contact us------------------------- */
 /* Код писать здесь */
+.contact-us-picture {
+  width: 425px;
+  height: 430px;
+}
 /* --------------------------contact us------------------------- */
 /* -------------------------------------------------------main------------------------------------------------------------------ */
 
