--- a/css/styles.css
+++ b/css/styles.css
@@ -156,9 +156,77 @@ body {
 
 /* --------------------------contact us------------------------- */
 /* Код писать здесь */
-.contact-us-picture {
+.contact-us {
+ padding-bottom: 55px;
+}
+
+.contact-us-title {
+  margin-bottom: 60px;
+  text-align: left;
+}
+
+.contact-us-desc {
+  margin-bottom: 30px;
+  width: 654px;
+}
+
+.contact-us-mail {
   width: 425px;
-  height: 430px;
+  height: 70px;
+  padding: 20px 30px;
+
+  border: 1px solid #8f95a5;
+  border-radius: 10px;
+}
+
+.contact-us-label {
+  margin-right: 30px;
+}
+
+.contact-us-mail::placeholder {
+  font-size: 16px;
+  line-height: 1.88;
+}
+
+.contact-us-button {
+  width: 312px;
+  height: 70px;
+
+  background: var(--accent-color);
+  border-radius: 10px;
+  border-color: transparent;
+  background-clip: border-box;
+  cursor: pointer;
+
+  letter-spacing: 0.03em;
+  color: var(--main-white-color);
+
+  transition: background-color 800ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-us-button:hover,
+.contact-us-button:focus {
+  background-color: var(--main-black-color);
+}
+
+.thumb {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.contact-us-container {
+  display: flex;
+}
+
+.contact-us-pic {
+  width: 390px;
+  height: 350px;
+  margin-right: 144px;
+}
+
+.contact-us-form {
+  display: flex;
 }
 /* --------------------------contact us------------------------- */
 /* -------------------------------------------------------main------------------------------------------------------------------ */
