--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  align-items: center;
 }
 
 .checklist {
